--- a/AppMascotas/AppMascotas/Home.xaml
+++ b/AppMascotas/AppMascotas/Home.xaml
@@ -1,13 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppMascotas.Home"
-             Title="Inicio"
-             IconImageSource="inicio.png">
-    
+             x:Class="AppMascotas.Home">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Area de inicio"
+            <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
