--- a/AppMascotas/AppMascotas/Registro.xaml
+++ b/AppMascotas/AppMascotas/Registro.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:Local="clr-namespace:AppMascotas"
-            x:Class="AppMascotas.Registro">
+            x:Class="AppMascotas.Registro"
+            NavigationPage.HasNavigationBar="False">
     <Local:Home/>
     <Local:RegistroM/>
     <Local:Configuracion/>
