--- a/AppMascotas/AppMascotas/RegistroM.xaml
+++ b/AppMascotas/AppMascotas/RegistroM.xaml
@@ -2,11 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppMascotas.RegistroM"
-             Title="Registro"
-             IconImageSource="camara.png">
+             Title="Carnet"
+             IconImageSource="id.png">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Registro de mascota"
+            <Label Text="Generacion de Carnet"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
