--- a/AppMascotas/AppMascotas/RegistroM.xaml
+++ b/AppMascotas/AppMascotas/RegistroM.xaml
@@ -15,15 +15,15 @@
             <Image Grid.Row="0" Source="logoh.png" WidthRequest="100" HeightRequest="100" Margin="0,50,0,30"/>
 
             <StackLayout Grid.Row="1" Padding="30,70">
-                <Entry Placeholder="Correo Electronico" PlaceholderColor="White" x:Name="txtUsuario"/>
-                <Entry Placeholder="Contraseña" PlaceholderColor="White" IsPassword="True" x:Name="txtContrasenia"/>
-                <Button Text="Iniciar Sesion" BackgroundColor="#A901DB" CornerRadius="10" TextColor="White" FontAttributes="Bold"/>
-                <Button Text="Google" BackgroundColor="#E6E6E6" Image="" TextColor="Black" FontAttributes="Bold" CornerRadius="10"/>
+                <Entry Placeholder="Campo de texto" PlaceholderColor="White" x:Name="txtUsuario"/>
+                <Entry Placeholder="Campo de texto" PlaceholderColor="White" IsPassword="True" x:Name="txtContrasenia"/>
+                <Button Text="Boton" BackgroundColor="#A901DB" CornerRadius="10" TextColor="White" FontAttributes="Bold"/>
+                <Button Text="Boton" BackgroundColor="#E6E6E6" Image="" TextColor="Black" FontAttributes="Bold" CornerRadius="10"/>
 
 
                 <StackLayout Orientation="Horizontal">
-                    <Label Text="Recuperar Contraseña"/>
-                    <Button Text="Registrarse" HorizontalOptions="EndAndExpand" FontAttributes="Bold" CornerRadius="10" />
+                    <Label Text="Campo de texto"/>
+                    <Button Text="Campo de texto" HorizontalOptions="EndAndExpand" FontAttributes="Bold" CornerRadius="10" />
                 </StackLayout>
             </StackLayout>
         </Grid>
