--- a/AppMascotas/AppMascotas/Configuracion.xaml
+++ b/AppMascotas/AppMascotas/Configuracion.xaml
@@ -12,12 +12,16 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
+            <StackLayout Grid.Row="0" Padding="30,70">
+                <Label Text="AppMascotas" FontAttributes="Bold"/>
+                <Label Text="Prototipo de App para generar DNI de mascotas y llevar un registro de las mascotas de un distrito. "/>
+                <Image Source="https://www.salud.mapfre.es/media/2016/07/ninos-mascotas-3.jpg"></Image>
+            </StackLayout>
+            
             <StackLayout Grid.Row="1" Padding="30,70">
-
-
-                <Label Text="Acerca De"  FontAttributes="Bold"/>
-                <Button Text="Cerrar Sesion" BackgroundColor="#A901DB" Image="" TextColor="White" FontAttributes="Bold" CornerRadius="10" Clicked="Button_Clicked"/>
-        
+                <Label Text="Version"  FontAttributes="Bold"/>
+                <Label Text="AppMascotas V 0.1"/>
+                <Button Text="Cerrar Sesion" BackgroundColor="#FF8000" Image="" TextColor="White" FontAttributes="Bold" CornerRadius="10" Clicked="Button_Clicked"/>
             </StackLayout>
         </Grid>
 
