--- a/AppMascotas/AppMascotas/NuevoRegistro.xaml
+++ b/AppMascotas/AppMascotas/NuevoRegistro.xaml
@@ -1,14 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppMascotas.NuevoRegistro">
+             x:Class="AppMascotas.NuevoRegistro"
+             NavigationPage.HasNavigationBar="False">
     <ContentPage.Content>
         <StackLayout>
-            <Entry x:Name="txtNombre" Placeholder="Ingrese el nombre"/>
-            <Entry x:Name="txtUsuario" Placeholder="Ingrese usuario"/>
-            <Entry x:Name="txtContrasenia" Placeholder="Ingrese la contrsenia"/>
 
-            <Button x:Name="btnAgregar" Text="Agregar" Clicked="btnAgregar_Clicked"/>
+            <Image Grid.Row="0" Source="logoh.png" WidthRequest="100" HeightRequest="100" Margin="0,50,0,30"/>
+            <Entry x:Name="txtNombre" Placeholder="Nombre de Usuario"/>
+            <Entry x:Name="txtUsuario" Placeholder="Correo Electronico"/>
+            <Entry x:Name="txtContrasenia" Placeholder="Constaseña" IsPassword="True"/>
+
+            <Button x:Name="btnAgregar" Text="Registrar" BackgroundColor="#A901DB" TextColor="White" FontAttributes="Bold" CornerRadius="10" Clicked="btnAgregar_Clicked"/>
+            <Button Text="Regresar" BackgroundColor="#FF8000" TextColor="White" FontAttributes="Bold" CornerRadius="10" Clicked="Button_Clicked"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
