--- a/AppMascotas/AppMascotas/Home.xaml
+++ b/AppMascotas/AppMascotas/Home.xaml
@@ -42,8 +42,8 @@
                 </StackLayout>
 
                 <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-                    <Button x:Name="btnTomarFoto" Text="Tomar Foto" BackgroundColor="#FF8000" CornerRadius="10" TextColor="White"/>
-                    <Button x:Name="btnSeleccionarFoto" Text="Selecionar Foto" BackgroundColor="#FF8000" CornerRadius="10" TextColor="White"/>
+                    <Button x:Name="btnTomarFoto" Text="Tomar Foto" Clicked="btnTomarFoto_Clicked" BackgroundColor="#FF8000" CornerRadius="10" TextColor="White"/>
+                    <Button x:Name="btnSeleccionarFoto" Text="Selecionar Foto"  Clicked="btnSeleccionarFoto_Clicked" BackgroundColor="#FF8000" CornerRadius="10" TextColor="White"/>
                     <Image x:Name="Imagen"/>
                     <Button x:Name="btnRegistrar" Text="Registrar"   BackgroundColor="#A901DB" CornerRadius="10" TextColor="White" FontAttributes="Bold" Clicked="btnRegistrar_Clicked"/>
                 </StackLayout>
