--- a/AppMascotas/AppMascotas/Home.xaml
+++ b/AppMascotas/AppMascotas/Home.xaml
@@ -16,40 +16,45 @@
 
                 <StackLayout Orientation="Horizontal">
                     <Label Text="Numero de ID" FontSize="14" FontAttributes="Bold"/>
-                    <Entry x:Name="txtIdMascota" Placeholder="ID Mascota" HorizontalOptions="EndAndExpand"  />
+                    <Entry x:Name="txtIdMascota" Placeholder="ID Mascota" CharacterSpacing="6" HorizontalOptions="EndAndExpand" />
                 </StackLayout>
 
                 <StackLayout Orientation="Horizontal">
                     <Label Text="Nombre de la mascota " FontSize="14"  FontAttributes="Bold"/>
-                    <Entry x:Name="txtNombreM" Placeholder="Nombre" HorizontalOptions="EndAndExpand" />
+                    <Entry x:Name="txtNombreM" Placeholder="Nombre" CharacterSpacing="10" HorizontalOptions="EndAndExpand" />
                 </StackLayout>
                 
                 <StackLayout Orientation="Horizontal">
-                    <Label Text="Raza:" FontSize="14"  FontAttributes="Bold"/>
-                    <Entry x:Name="txtRaza" Placeholder="Raza" HorizontalOptions="EndAndExpand"  />
+                    <Label Text="Tipo:" FontSize="14"  FontAttributes="Bold"/>
+                    <Entry x:Name="txtRaza" Placeholder="Dog/Cat" CharacterSpacing="5" HorizontalOptions="EndAndExpand"  />
 
                     <Label Text="Sexo:" FontSize="14"  FontAttributes="Bold"/>
-                    <Entry x:Name="txtSexo" Placeholder="Sexo"  HorizontalOptions="EndAndExpand"/>
+                    <Entry x:Name="txtSexo" Placeholder="Sexo" CharacterSpacing="7" HorizontalOptions="EndAndExpand"/>
                 </StackLayout>
 
                 <StackLayout Orientation="Horizontal">
                     <Label Text="Nombre Propietario" FontSize="14"  FontAttributes="Bold"/>
-                    <Entry x:Name="txtNombreD" Placeholder="Nombre" HorizontalOptions="EndAndExpand"/>
+                    <Entry x:Name="txtNombreD" Placeholder="Nombre" CharacterSpacing="10" HorizontalOptions="EndAndExpand"/>
                 </StackLayout>
                 <StackLayout Orientation="Horizontal">
                     <Label Text="Direccion" FontSize="14"  FontAttributes="Bold"/>
-                    <Entry x:Name="txtDireccion" Placeholder="Direccion" HorizontalOptions="EndAndExpand" />
+                    <Entry x:Name="txtDireccion" Placeholder="Direccion" CharacterSpacing="14" HorizontalOptions="EndAndExpand" />
+                </StackLayout>
+                <StackLayout>
+
+                    <Image x:Name="Imagen"/>
+
                 </StackLayout>
 
-                <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-                    <Button x:Name="btnTomarFoto" Text="Tomar Foto" Clicked="btnTomarFoto_Clicked" BackgroundColor="#FF8000" CornerRadius="10" TextColor="White"/>
-                    <Button x:Name="btnSeleccionarFoto" Text="Selecionar Foto"  Clicked="btnSeleccionarFoto_Clicked" BackgroundColor="#FF8000" CornerRadius="10" TextColor="White"/>
-                    <Image x:Name="Imagen"/>
+                <StackLayout Orientation="Horizontal" Spacing="60" >
+
+                    <Button x:Name="btnTomarFoto" Text="Camara" Clicked="btnTomarFoto_Clicked" BackgroundColor="#FF8000" CornerRadius="10" TextColor="White"/>
+                    <Button x:Name="btnSeleccionarFoto" Text="Seleccionar Foto"  Clicked="btnSeleccionarFoto_Clicked" BackgroundColor="#FF8000" CornerRadius="10" TextColor="White"/>
+                </StackLayout>
+                <StackLayout>
                     <Button x:Name="btnRegistrar" Text="Registrar"   BackgroundColor="#A901DB" CornerRadius="10" TextColor="White" FontAttributes="Bold" Clicked="btnRegistrar_Clicked"/>
                 </StackLayout>
                 
-              
-
             </StackLayout>
         </Grid>
     </ContentPage.Content>
